[ft-front-end-login-#162213875]Add login data

--- a/UI/pages/Login.html
+++ b/UI/pages/Login.html
@@ -52,12 +52,14 @@
             class="custom-input"
           />
         </div>
-        <a
+        <button
           class="btn btn-primary"
           type="button"
           href="./ClientDashboard.html"
-          >Login</a
+          id="login-button"
         >
+          Login
+        </button>
         <div class="links">
           <a href="../index.html" class="link"
             >Create new account</a
@@ -74,4 +76,6 @@
       </div>
     </section>
   </body>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="../front-end/login.js"></script>
 </html>
