[ft-front-end-login-#162213875]Add create parcel

--- a/UI/pages/InTransit.html
+++ b/UI/pages/InTransit.html
@@ -87,294 +87,6 @@
                                 <th>Sent Time</th>
                                 <th>Status</th>
                             </tr>
-                            <tr>
-                                <td>Kicukiro</td>
-                                <td>KK 11 AV</td>
-                                <td class="editable">
-                                    <span>Gasabo</span>
-                                    <span class="icon-edit" onclick="openModel()">
-                                        <img src="../assets/icons/edit.svg" alt="*" srcset="" title="Edit" class="lg-icon">
-                                    </span>
-                                </td>
-                                <td>KK 19 Av</td>
-                                <td>
-                                    <span> Q:2</span>
-                                    <span> W:5</span>
-                                    <span> L:4</span>
-                                    <span> H:3</span>
-                                </td>
-                                <td>2 Feb, 18</td>
-                                <td class="status">
-                                    <span>False</span>
-                                    <span class="icon-cancel" onclick="cancelOrder(this)">
-                                        <img src="../assets/icons/cancel.svg" alt="*" srcset="" title="Cancel" class="lg-icon">
-                                    </span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Kicukiroon</td>
-                                <td>KK 11 AV</td>
-                                <td class="editable">
-                                    <span>Gasabo</span>
-                                    <span class="icon-edit" onclick="openModel()">
-                                        <img src="../assets/icons/edit.svg" alt="*" srcset="" title="Edit" class="lg-icon">
-                                    </span>
-                                </td>
-                                <td>KK 19 Av</td>
-                                <td>
-                                    <span> Q:2</span>
-                                    <span> W:5</span>
-                                    <span> L:4</span>
-                                    <span> H:3</span>
-                                </td>
-                                <td>2 Feb, 18</td>
-                                <td class="status">
-                                    <span>False</span>
-                                    <span class="icon-cancel" onclick="cancelOrder(this)">
-                                        <img src="../assets/icons/cancel.svg" alt="*" srcset="" title="Cancel" class="lg-icon">
-                                    </span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Kicukiroon</td>
-                                <td>KK 11 AV</td>
-                                <td class="editable">
-                                    <span>Gasabo</span>
-                                    <span class="icon-edit" onclick="openModel()">
-                                        <img src="../assets/icons/edit.svg" alt="*" srcset="" title="Edit" class="lg-icon">
-                                    </span>
-                                </td>
-                                <td>KK 19 Av</td>
-                                <td>
-                                    <span> Q:2</span>
-                                    <span> W:5</span>
-                                    <span> L:4</span>
-                                    <span> H:3</span>
-                                </td>
-                                <td>2 Feb, 18</td>
-                                <td class="status">
-                                    <span>False</span>
-                                    <span class="icon-cancel" onclick="cancelOrder(this)">
-                                        <img src="../assets/icons/cancel.svg" alt="*" srcset="" title="Cancel" class="lg-icon">
-                                    </span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Kicukiroon</td>
-                                <td>KK 11 AV</td>
-                                <td class="editable">
-                                    <span>Gasabo</span>
-                                    <span class="icon-edit" onclick="openModel()">
-                                        <img src="../assets/icons/edit.svg" alt="*" srcset="" title="Edit" class="lg-icon">
-                                    </span>
-                                </td>
-                                <td>KK 19 Av</td>
-                                <td>
-                                    <span> Q:2</span>
-                                    <span> W:5</span>
-                                    <span> L:4</span>
-                                    <span> H:3</span>
-                                </td>
-                                <td>2 Feb, 18</td>
-                                <td class="status">
-                                    <span>False</span>
-                                    <span class="icon-cancel" onclick="cancelOrder(this)">
-                                        <img src="../assets/icons/cancel.svg" alt="*" srcset="" title="Cancel" class="lg-icon">
-                                    </span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Kicukiroon</td>
-                                <td>KK 11 AV</td>
-                                <td class="editable">
-                                    <span>Gasabo</span>
-                                    <span class="icon-edit" onclick="openModel()">
-                                        <img src="../assets/icons/edit.svg" alt="*" srcset="" title="Edit" class="lg-icon">
-                                    </span>
-                                </td>
-                                <td>KK 19 Av</td>
-                                <td>
-                                    <span> Q:2</span>
-                                    <span> W:5</span>
-                                    <span> L:4</span>
-                                    <span> H:3</span>
-                                </td>
-                                <td>2 Feb, 18</td>
-                                <td class="status">
-                                    <span>False</span>
-                                    <span class="icon-cancel" onclick="cancelOrder(this)">
-                                        <img src="../assets/icons/cancel.svg" alt="*" srcset="" title="Cancel" class="lg-icon">
-                                    </span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Kicukiroon</td>
-                                <td>KK 11 AV</td>
-                                <td class="editable">
-                                    <span>Gasabo</span>
-                                    <span class="icon-edit" onclick="openModel()">
-                                        <img src="../assets/icons/edit.svg" alt="*" srcset="" title="Edit" class="lg-icon">
-                                    </span>
-                                </td>
-                                <td>KK 19 Av</td>
-                                <td>
-                                    <span> Q:2</span>
-                                    <span> W:5</span>
-                                    <span> L:4</span>
-                                    <span> H:3</span>
-                                </td>
-                                <td>2 Feb, 18</td>
-                                <td class="status">
-                                    <span>False</span>
-                                    <span class="icon-cancel" onclick="cancelOrder(this)">
-                                        <img src="../assets/icons/cancel.svg" alt="*" srcset="" title="Cancel" class="lg-icon">
-                                    </span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Kicukiroon</td>
-                                <td>KK 11 AV</td>
-                                <td class="editable">
-                                    <span>Gasabo</span>
-                                    <span class="icon-edit" onclick="openModel()">
-                                        <img src="../assets/icons/edit.svg" alt="*" srcset="" title="Edit" class="lg-icon">
-                                    </span>
-                                </td>
-                                <td>KK 19 Av</td>
-                                <td>
-                                    <span> Q:2</span>
-                                    <span> W:5</span>
-                                    <span> L:4</span>
-                                    <span> H:3</span>
-                                </td>
-                                <td>2 Feb, 18</td>
-                                <td class="status">
-                                    <span>False</span>
-                                    <span class="icon-cancel" onclick="cancelOrder(this)">
-                                        <img src="../assets/icons/cancel.svg" alt="*" srcset="" title="Cancel" class="lg-icon">
-                                    </span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Kicukiroon</td>
-                                <td>KK 11 AV</td>
-                                <td class="editable">
-                                    <span>Gasabo</span>
-                                    <span class="icon-edit" onclick="openModel()">
-                                        <img src="../assets/icons/edit.svg" alt="*" srcset="" title="Edit" class="lg-icon">
-                                    </span>
-                                </td>
-                                <td>KK 19 Av</td>
-                                <td>
-                                    <span> Q:2</span>
-                                    <span> W:5</span>
-                                    <span> L:4</span>
-                                    <span> H:3</span>
-                                </td>
-                                <td>2 Feb, 18</td>
-                                <td class="status">
-                                    <span>False</span>
-                                    <span class="icon-cancel" onclick="cancelOrder(this)">
-                                        <img src="../assets/icons/cancel.svg" alt="*" srcset="" title="Cancel" class="lg-icon">
-                                    </span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Kicukiroon</td>
-                                <td>KK 11 AV</td>
-                                <td class="editable">
-                                    <span>Gasabo</span>
-                                    <span class="icon-edit" onclick="openModel()">
-                                        <img src="../assets/icons/edit.svg" alt="*" srcset="" title="Edit" class="lg-icon">
-                                    </span>
-                                </td>
-                                <td>KK 19 Av</td>
-                                <td>
-                                    <span> Q:2</span>
-                                    <span> W:5</span>
-                                    <span> L:4</span>
-                                    <span> H:3</span>
-                                </td>
-                                <td>2 Feb, 18</td>
-                                <td class="status">
-                                    <span>False</span>
-                                    <span class="icon-cancel" onclick="cancelOrder(this)">
-                                        <img src="../assets/icons/cancel.svg" alt="*" srcset="" title="Cancel" class="lg-icon">
-                                    </span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Kicukiroon</td>
-                                <td>KK 11 AV</td>
-                                <td class="editable">
-                                    <span>Gasabo</span>
-                                    <span class="icon-edit" onclick="openModel()">
-                                        <img src="../assets/icons/edit.svg" alt="*" srcset="" title="Edit" class="lg-icon">
-                                    </span>
-                                </td>
-                                <td>KK 19 Av</td>
-                                <td>
-                                    <span> Q:2</span>
-                                    <span> W:5</span>
-                                    <span> L:4</span>
-                                    <span> H:3</span>
-                                </td>
-                                <td>2 Feb, 18</td>
-                                <td class="status">
-                                    <span>False</span>
-                                    <span class="icon-cancel" onclick="cancelOrder(this)">
-                                        <img src="../assets/icons/cancel.svg" alt="*" srcset="" title="Cancel" class="lg-icon">
-                                    </span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Kicukiroon</td>
-                                <td>KK 11 AV</td>
-                                <td class="editable">
-                                    <span>Gasabo</span>
-                                    <span class="icon-edit" onclick="openModel()">
-                                        <img src="../assets/icons/edit.svg" alt="*" srcset="" title="Edit" class="lg-icon">
-                                    </span>
-                                </td>
-                                <td>KK 19 Av</td>
-                                <td>
-                                    <span> Q:2</span>
-                                    <span> W:5</span>
-                                    <span> L:4</span>
-                                    <span> H:3</span>
-                                </td>
-                                <td>2 Feb, 18</td>
-                                <td class="status">
-                                    <span>False</span>
-                                    <span class="icon-cancel" onclick="cancelOrder(this)">
-                                        <img src="../assets/icons/cancel.svg" alt="*" srcset="" title="Cancel" class="lg-icon">
-                                    </span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Kicukiroon</td>
-                                <td>KK 11 AV</td>
-                                <td class="editable">
-                                    <span>Gasabo</span>
-                                    <span class="icon-edit" onclick="openModel()">
-                                        <img src="../assets/icons/edit.svg" alt="*" srcset="" title="Edit" class="lg-icon">
-                                    </span>
-                                </td>
-                                <td>KK 19 Av</td>
-                                <td>
-                                    <span> Q:2</span>
-                                    <span> W:5</span>
-                                    <span> L:4</span>
-                                    <span> H:3</span>
-                                </td>
-                                <td>2 Feb, 18</td>
-                                <td class="status">
-                                    <span>False</span>
-                                    <span class="icon-cancel" onclick="cancelOrder(this)">
-                                        <img src="../assets/icons/cancel.svg" alt="*" srcset="" title="Cancel" class="lg-icon">
-                                    </span>
-                                </td>
-                            </tr>
                         </table>
                     </div>
                 </div>
@@ -391,15 +103,15 @@
                     <div class="labeled-input">
                         <label for="email">Destination</label>
                         <div class="custom-select">
-                            <select>
-                                <option value="0">Gasabo</option>
-                                <option value="1">Musanze</option>
-                                <option value="2">Nyama</option>
-                                <option value="3">Nyarugenge</option>
-                                <option value="4">Kicukiro</option>
-                                <option value="5">Kamonyi</option>
-                                <option value="6">Muhanga</option>
-                                <option value="7">Rwamagana</option>
+                            <select id="model-destination">
+                                <option value="Gasabo">Gasabo</option>
+                                <option value="Musanze">Musanze</option>
+                                <option value="Nyama">Nyama</option>
+                                <option value="Nyarugenge">Nyarugenge</option>
+                                <option value="Kicukiro">Kicukiro</option>
+                                <option value="Kamonyi">Kamonyi</option>
+                                <option value="Muhanga">Muhanga</option>
+                                <option value="Rwamagana">Rwamagana</option>
                             </select>
                         </div>
                     </div>
@@ -408,7 +120,7 @@
                 <div class="col-4">
                     <div class="labeled-input">
                         <label for="faddres">Address</label>
-                        <input type="text" name="address" id="address" class="custom-input" pattern="[0-9]{5}" style="width: 100%">
+                        <input type="text" name="address" id="model-address" class="custom-input" pattern="[0-9]{5}" style="width: 100%">
                     </div>
                 </div>
             </div>
@@ -418,7 +130,7 @@
                 </div>
                 <div class="col-3"></div>
                 <div class="col-4">
-                    <button class="btn btn-block btn-primary" id="#next-pay" onclick="closeModel()">Save</button>
+                    <button class="btn btn-block btn-primary" id="#next-pay" onclick="updateParcel()">Save</button>
                 </div>
             </div>
         </div>
