[ft-front-end-login-#162213875] Add parcel update

--- a/UI/pages/ClientDashboard.html
+++ b/UI/pages/ClientDashboard.html
@@ -73,13 +73,13 @@
           </a>
         </div>
       </div>
-      <div class="down-link">
+      <div class="down-link" id="lg-logout">
         <img
           src="../assets/icons/logout.svg"
           alt="lg"
           srcset=""
         />
-        <a href="./Login.html" class="nav-link">Logout</a>
+        <a class="nav-link">Logout</a>
       </div>
     </section>
     <section class="right top-nav">
