--- a/UI/pages/InTransit.html
+++ b/UI/pages/InTransit.html
@@ -137,6 +137,7 @@
     </section>
     <!-- jquery liblary -->
     <script src="../front-end/jquery.min.js"></script>
+    <script src="../js/main.js"></script>
     <!-- popup model javascript -->
     <script src="../js/model.js"></script>
     <script src="../front-end/intransit.js"></script>
