--- a/UI/pages/NewOrder.html
+++ b/UI/pages/NewOrder.html
@@ -108,10 +108,8 @@
             srcset=""
             class="sm-circle profile"
           />
-          <div class="names">
-            <p>FirstName</p>
-            <p>Last Name</p>
-          </div>
+            <div class="names" id="user-names">
+            </div>
           <img
             src="../assets/icons/notification-bell.svg"
             alt=""
@@ -471,6 +469,7 @@
         </div> -->
       </div>
     </section>
+    <script src="../front-end/jquery.min.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/newOrder.js"></script>
     <script src="../front-end/singleparcel.js"></script>
