[ch-code-refactor-#162272039]Add htm page routers

--- a/UI/pages/client.html
+++ b/UI/pages/client.html
@@ -44,7 +44,7 @@
             />
             <span>Home</span>
           </a>
-          <a href="./NewOrder.html" class="nav-link ">
+          <a href="/parcels/new" class="nav-link ">
             <img
               src="../assets/icons/plus-light.svg"
               alt=""
@@ -53,7 +53,7 @@
             />
             <span>Add Order</span>
           </a>
-          <a href="./InTransit.html" class="nav-link">
+          <a href="/parcels/in_transit" class="nav-link">
             <img
               src="../assets/icons/moving-truck-light.svg"
               alt=""
@@ -123,11 +123,11 @@
           <div class="dropdown-content" id="drp-conent">
             <ul>
               <li><a href="#">Home</a></li>
-              <li><a href="./NewOrder.html">New</a></li>
+              <li><a href="/parcels/new">New</a></li>
               <li>
-                <a href="./InTransit.html">Transit</a>
+                <a href="/parcels/in_transit">Transit</a>
               </li>
-              <li><a href="./Login.html">Logout</a></li>
+              <li><a href="/Login">Logout</a></li>
             </ul>
           </div>
         </div>
