--- a/UI/pages/intransit.html
+++ b/UI/pages/intransit.html
@@ -20,11 +20,11 @@
                 <h3>SendIT</h3>
             </div>
             <div class="sidebar-links">
-                <a href="./ClientDashboard.html" class="nav-link">
+                <a href="/client" class="nav-link">
                     <img src="../assets/icons/home-light.svg" alt="" srcset="" class="xlg-icon">
                     <span>Home</span>
                 </a>
-                <a href="./NewOrder.html" class="nav-link ">
+                <a href="/parcels/new" class="nav-link ">
                     <img src="../assets/icons/plus-light.svg" alt="" srcset="" class="xlg-icon">
                     <span>Add Order</span>
                 </a>
@@ -61,10 +61,10 @@
                 </div>
                 <div class="dropdown-content" id="drp-conent">
                     <ul>
-                        <li><a href="./ClientDashboard.html">Home</a></li>
-                        <li><a href="./NewOrder.html">New</a></li>
+                        <li><a href="/client">Home</a></li>
+                        <li><a href="/parcels/new">New</a></li>
                         <li><a href="#">Transit</a></li>
-                        <li><a href="./Login.html">Logout</a></li>
+                        <li><a href="/login">Logout</a></li>
                     </ul>
                 </div>
             </div>
