--- a/UI/pages/newparcel.html
+++ b/UI/pages/newparcel.html
@@ -44,7 +44,7 @@
           <h3>SendIT</h3>
         </div>
         <div class="sidebar-links">
-          <a href="./ClientDashboard.html" class="nav-link">
+          <a href="/client" class="nav-link">
             <img
               src="../assets/icons/home-light.svg"
               alt=""
@@ -62,7 +62,7 @@
             />
             <span>Add Order</span>
           </a>
-          <a href="./InTransit.html" class="nav-link">
+          <a href="/parcels/in_transit" class="nav-link">
             <img
               src="../assets/icons/moving-truck-light.svg"
               alt=""
@@ -128,13 +128,13 @@
           <div class="dropdown-content" id="drp-conent">
             <ul>
               <li>
-                <a href="./ClientDashboard.html">Home</a>
+                <a href="/client">Home</a>
               </li>
               <li><a href="#">New</a></li>
               <li>
-                <a href="./InTransit.html">Transit</a>
+                <a href="/parcels/in_transit">Transit</a>
               </li>
-              <li><a href="./Login.html">Logout</a></li>
+              <li><a href="/login">Logout</a></li>
             </ul>
           </div>
         </div>
