--- a/UI/pages/admin.html
+++ b/UI/pages/admin.html
@@ -46,13 +46,13 @@
           </a>
         </div>
       </div>
-      <div class="down-link">
+      <div class="down-link" id="lg-logout">
         <img
           src="../assets/icons/logout.svg"
           alt="lg"
           srcset=""
         />
-        <a href="./Login.html" class="nav-link">Logout</a>
+        <a href="/Login" class="nav-link">Logout</a>
       </div>
     </section>
     <section class="right top-nav">
@@ -98,7 +98,7 @@
           <div class="dropdown-content" id="drp-conent">
             <ul>
               <li><a href="#">Home</a></li>
-              <li><a href="./Login.html">Logout</a></li>
+              <li><a href="/Login">Logout</a></li>
             </ul>
           </div>
         </div>
@@ -569,7 +569,8 @@
       </div>
     </section>
     <!-- popup model javascript -->
-    <!-- <script src="../js/main.js"></script> -->
+    <script src="../front-end/jquery.min.js"></script>
+    <script src="../js/main.js"></script>
     <script src="../js/model.js"></script>
   </body>
 </html>
